--- a/angular/components/src/app/components/container/container.component.html
+++ b/angular/components/src/app/components/container/container.component.html
@@ -5,6 +5,6 @@
 
 	<mat-sidenav-content>
 		<app-header (toggle)="toggleSidenav()"></app-header>
-		
+		<app-login-page></app-login-page>
 	</mat-sidenav-content>
 </mat-sidenav-container>  
