First Chart Component

--- a/angular/components/src/app/app.component.html
+++ b/angular/components/src/app/app.component.html
@@ -1,3 +1,7 @@
 <!-- <app-container></app-container> -->
 
 <app-header-responsive></app-header-responsive>
+
+<!-- <app-login-page></app-login-page> -->
+
+<app-simple-line-chart></app-simple-line-chart>
